[gd_scene load_steps=17 format=2]

[ext_resource path="res://Interface/DialogGUI/Dialog.gd" type="Script" id=1]
[ext_resource path="res://Interface/sprites/scroll.png" type="Texture" id=2]
[ext_resource path="res://Fonts/scroll.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 3 )

[node name="Dialog" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( -2.66907, 0.000732422 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -519.5
margin_top = -372.5
margin_right = 519.5
margin_bottom = 372.5
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Task" type="Control" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Label" type="TextEdit" parent="TextureRect/Task"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -236.0
margin_right = 312.0
margin_bottom = 176.0
mouse_filter = 2
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_styles/completion = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/member_variable_color = Color( 0, 0, 0, 1 )
custom_colors/code_folding_color = Color( 0, 0, 0, 1 )
custom_colors/function_color = Color( 0, 0, 0, 1 )
custom_colors/safe_line_number_color = Color( 0, 0, 0, 1 )
custom_colors/symbol_color = Color( 0, 0, 0, 1 )
custom_colors/caret_background_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/caret_color = Color( 0, 0, 0, 1 )
custom_colors/breakpoint_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/line_number_color = Color( 0, 0, 0, 1 )
custom_colors/completion_font_color = Color( 0, 0, 0, 1 )
custom_colors/completion_scroll_color = Color( 0, 0, 0, 1 )
custom_colors/background_color = Color( 0, 0, 0, 1 )
custom_colors/number_color = Color( 0, 0, 0, 1 )
custom_colors/completion_background_color = Color( 0, 0, 0, 1 )
custom_colors/brace_mismatch_color = Color( 0, 0, 0, 1 )
custom_colors/current_line_color = Color( 0, 0, 0, 1 )
custom_colors/completion_selected_color = Color( 0, 0, 0, 1 )
custom_colors/mark_color = Color( 0, 0, 0, 1 )
custom_colors/word_highlighted_color = Color( 0, 0, 0, 1 )
custom_colors/completion_existing_color = Color( 0, 0, 0, 1 )

[node name="GoAnswer" type="Button" parent="TextureRect/Task"]
margin_left = 87.199
margin_top = 205.0
margin_right = 368.199
margin_bottom = 244.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Написать ответ!"
flat = true

[node name="Answer" type="Control" parent="TextureRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Label" type="TextEdit" parent="TextureRect/Answer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -341.0
margin_top = -229.5
margin_right = 341.0
margin_bottom = 197.5
custom_styles/read_only = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_styles/completion = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/member_variable_color = Color( 0, 0, 0, 1 )
custom_colors/code_folding_color = Color( 0, 0, 0, 1 )
custom_colors/function_color = Color( 0, 0, 0, 1 )
custom_colors/symbol_color = Color( 0, 0, 0, 1 )
custom_colors/caret_background_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/caret_color = Color( 0, 0, 0, 1 )
custom_colors/breakpoint_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/line_number_color = Color( 0, 0, 0, 1 )
custom_colors/completion_font_color = Color( 0, 0, 0, 1 )
custom_colors/completion_scroll_color = Color( 0, 0, 0, 1 )
custom_colors/background_color = Color( 0, 0, 0, 1 )
custom_colors/number_color = Color( 0, 0, 0, 1 )
custom_colors/completion_background_color = Color( 0, 0, 0, 1 )
custom_colors/brace_mismatch_color = Color( 0, 0, 0, 1 )
custom_colors/current_line_color = Color( 0, 0, 0, 1 )
custom_colors/completion_selected_color = Color( 0, 0, 0, 1 )
custom_colors/mark_color = Color( 0, 0, 0, 1 )
custom_colors/word_highlighted_color = Color( 0, 0, 0, 1 )
custom_colors/completion_existing_color = Color( 0, 0, 0, 1 )

[node name="Back" type="Button" parent="TextureRect/Answer"]
margin_left = -364.362
margin_top = 205.0
margin_right = -213.362
margin_bottom = 248.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "К задаче!"
flat = true

[node name="Send" type="Button" parent="TextureRect/Answer"]
margin_left = 177.0
margin_top = 205.0
margin_right = 361.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Отправить!"
flat = true
[connection signal="pressed" from="TextureRect/Task/GoAnswer" to="." method="_on_GoAnswer_pressed"]
[connection signal="pressed" from="TextureRect/Answer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="TextureRect/Answer/Send" to="." method="_on_Send_pressed"]
